GSI query test
